<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_24px"
        android:layout_marginRight="@dimen/standard_24px"
        android:layout_marginTop="@dimen/standard_40px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mobile"
            android:textColor="@android:color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/font_size_720x1080_16sp"/>
        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/input_box_bg"
            android:hint="@string/please_input_11_num"
            android:paddingLeft="@dimen/standard_24px"
            android:paddingTop="@dimen/padding_720x1080_10dp"
            android:paddingBottom="@dimen/padding_720x1080_10dp"
            android:inputType="phone"
            android:layout_marginLeft="@dimen/standard_24px"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/font_size_720x1080_16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_24px"
        android:layout_marginRight="@dimen/standard_24px"
        android:layout_marginTop="@dimen/standard_40px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify_code"
            android:textColor="@android:color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/font_size_720x1080_16sp"/>
        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/verify_input_box"
            android:hint="@string/mobile_verify_code"
            android:paddingLeft="@dimen/standard_24px"
            android:paddingTop="@dimen/padding_720x1080_10dp"
            android:paddingBottom="@dimen/padding_720x1080_10dp"
            android:inputType="number"
            android:layout_marginLeft="@dimen/standard_24px"
            android:layout_marginRight="@dimen/standard_20px"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/font_size_720x1080_16sp" />
        <Button
            android:id="@+id/get_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@mipmap/verify_button_normal"
            android:textColor="@drawable/white_to_bg_color_selector"
            android:text="@string/send_verify_code"
            android:textSize="@dimen/font_size_720x1080_16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_24px"
        android:layout_marginRight="@dimen/standard_24px"
        android:layout_marginTop="@dimen/standard_40px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_password"
            android:textColor="@android:color/white"
            android:textScaleX="1.1"
            android:textSize="@dimen/font_size_720x1080_16sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/input_box_bg"
            android:layout_marginLeft="@dimen/standard_24px"
            android:paddingLeft="@dimen/standard_24px"
            android:paddingTop="@dimen/padding_720x1080_10dp"
            android:paddingBottom="@dimen/padding_720x1080_10dp"
            android:paddingRight="@dimen/standard_26px">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:background="@null"
                android:maxLength="18"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_720x1080_16sp" />
            <CheckBox
                android:id="@+id/visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                style="@style/visible_checkbox"
                android:checked="true" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@mipmap/login_button_normal"
        android:layout_marginLeft="@dimen/standard_24px"
        android:layout_marginRight="@dimen/standard_24px"
        android:layout_marginTop="@dimen/standard_60px"
        android:text="@string/confirm"
        android:textColor="@drawable/white_to_bg_color_selector"
        android:textSize="@dimen/font_size_720x1080_16sp"/>

</LinearLayout>